# Flora-Green

./: README.md
Mechanical_Flower/: Mechanical_Flower.ino
Nrf52840/: CMakeLists.txt  prj.conf
Nrf52840/boards/: intel_socfpga_agilex5_socdk.overlay  native_sim.overlay  nrf52840dk_nrf52840.overlay
Nrf52840/include/: ahu_led.h  ahu_shell.h  ahu_timer.h  ahu_uart.h  ble_central.h  ble_devices.h  ble_rules.h  hci.h
Nrf52840/mylib/: ahu_led.c  ahu_shell.c  ahu_timer.c  ahu_uart.c  ble_central.c  ble_devices.c  hci.c
Nrf52840/src/: main.c
PC/: main.py  paho_pub.py  paho_sub.py  receive_serial.py
Testing/m5core2PinTester/: AnalogPinTester.ino
Thingy52/: prj.conf
Thingy52/include/: ble_defs.h
Thingy52/src/: main.c
m5Core2/: Flora-Greenm5Core2.ino
m5Core2/Flora-Greenm5Core2/: Flora-Greenm5Core2.ino
